<resources>
    <string name="app_name">nEXam</string>
    <string name="subject">Subject:</string>
    <string name="enter_subject">enter Subject</string>
    <string name="topic">Topic:</string>
    <string name="hint">hint</string>
    <string name="content">Content:</string>
    <string name="enter_content_of_first_topic">enter content of first topic</string>
    <string name="enter_first_topic">enter first topic</string>
    <string name="date">Date</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="nEXam">nEXam</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="startTimer">Start Timer</string>
    <string name="createExam">Create Exam</string>
    <string name="current_exams">Current Exams:</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="remaining_time_for_selected_exam">Remaining time for selected exam</string>
    <string name="mathematik_iii">Mathematik III</string>
    <string name="statistik">Statistik</string>
    <string name="_2021_12_09">2021-12-09</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="edit_exam">Edit Exam</string>
    <string name="to_dashboard">To Dashboard</string>
    <string name="show_exam">Show Exam</string>
    <string name="success">Success</string>
    <string name="the_following_exam_has_been_created">The following exam has been created:</string>
    <string name="error">Error</string>
    <string name="the_following_error_occurred">The following error occurred:</string>
    <string name="invalide_date_please_use">invalide date, please use</string>
    <string name="example_error">Invalide date, please use:</string>
    <string name="example_correction">yyyy_mm_dd</string>
    <string name="example_success">The following exam has been created:</string>
    <string name="example_exam">Mathematik III</string>
    <string name="example_topic">Statistik</string>
</resources>