<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/footer" />

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textSize="@dimen/default_font_size" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_subject" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic"
                    android:textSize="@dimen/default_font_size" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_first_topic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textSize="@dimen/default_font_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/enter_content_of_first_topic"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/default_font_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yyyy_mm_dd"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/margin_buttons"
                android:layout_marginRight="@dimen/margin_buttons"
                android:gravity="bottom|center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

    </RelativeLayout>

</RelativeLayout>