<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/footer" />

    <include layout="@layout/buttons_exam_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_exam_view"
        android:layout_alignParentTop="true"
        android:overScrollMode="always">

        <RelativeLayout
            android:id="@+id/exam_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject"
                    android:textSize="@dimen/default_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_exam"
                    android:textSize="@dimen/default_title_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/topic"
                    android:textSize="@dimen/default_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_topic"
                    android:textSize="@dimen/default_title_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/date"
                    android:textSize="@dimen/default_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:text="@string/_2021_12_09"
                    android:textSize="@dimen/default_title_font_size"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/content"
                    android:textSize="@dimen/default_font_size" />

                <ListView
                    android:id="@+id/content_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:overScrollMode="always" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>